@@ -1,4 +1,11 @@
 2004-10-10  Christian Ruppert <arc@users.sf.net>
+	* uwm/confparse.tab.y, uwm/confparse.lex.l: redefined atoms for event
+	  description language to be more natural.
+	* uwm/conf_func.h: removed small bug in _cf_data definition. this file
+	  will probably have to be rewritten since the event description
+	  language changed significantly since it was initially created.
+
+2004-10-10  Christian Ruppert <arc@users.sf.net>
 	* uwm/confparse.lex.l, uwm/confparse.tab.y: added atoms for event
 	  description language.
 
